ParquetRs integration