@@ -32,6 +32,8 @@ testClusters.register("runTask") {
       keystore 'bootstrap.password', 'password'
       user username: 'elastic-admin', password: 'elastic-password', role: '_es_test_root'
       numberOfNodes = 1
+      // Arrow memory allocator needs access to java.nio internals
+      jvmArgs '--add-opens=java.base/java.nio=ALL-UNNAMED'
     }
 }
 
